--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://cloud-test-api.vercel.app",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
