--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,17 +2,20 @@
     "version": 2,
     "builds": [
       {
-        "src": "client/package.json",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "client/build"
+          "distDir": "build"
         }
       }
     ],
     "routes": [
       {
+        "handle": "filesystem"
+      },
+      {
         "src": "/(.*)",
-        "dest": "/client/build/index.html"
+        "dest": "/index.html"
       }
     ]
   }
