--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/uploads/(.*)",
-      "dest": "/uploads/$1"
+      "dest": "/server.js"
     },
     {
       "src": "/(.*)",
