--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.19.3",
     "axios": "^1.7.2",
     "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
