--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.19.3",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
+    "client": "file:",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react": "^18.3.1",
