--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.19.*",
     "express-fileupload": "^1.5.1",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
